css/style.css
body {
	display: flex;
	min-height: 100vh;
	flex-direction: column;
}

main {
	flex: 1 0 auto;
}

.blue-gradient {
	/* background: linear-gradient(135deg, #a9e4f7 0%, #0fb4e7 100%); */
	/* background-color: #8EC5FC;
	background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%); */
	/* 

	background-color: #FAACA8;
background-image: linear-gradient(19deg, #FAACA8 0%, #DDD6F3 100%); */

	background-image: linear-gradient(-20deg, #2b5876 0%, #4e4376 100%);

}

.strong {
	font-weight: 600;
}

.rounded {
	border-radius: 8px;
	overflow: hidden;
}

a:hover {
	color: #ff43a1;
}

#particles canvas {
	position: absolute;
	width: 100%;
	height: 100%;
	/* z-index: -1; */
}

#visiting-card {
	z-index: 9;
}

#stackoverflow {
	margin-right: initial;
}

